# disgrid

./: .gitignore  README.md  README.org  pyproject.toml  setup.py  unit_test_suite.py
docs/: disgrid_demo.ipynb  implementation_notes.org  scematics.drawio  simdata_demo.ipynb
samples/PLUTO42/: definitions.h  init.c  makefile  pluto  pluto.ini  sysconf.out  testdisgrid.py  testsimdata.py
samples/PLUTO43/: eos.c  init.c  local_make  makefile  pluto  pluto.ini
samples/example/: data_generation.ipynb  params.yml  text.txt  units.yml
samples/fargo3d/outputs/: IDL.var  (+1 more)
scripts/: deploy.sh  format.sh
simdata/: alias.py  aliases.py  data.py  field.py  fluid.py  grid.py  nbody.py  parameter.py  particles.py  scalar.py  simdata.py  vector.py
simdata/loader/: __init__.py  example_code_loader.py
simdata/loaders/: .__init__.py.swp  __init__.py  example_code_loader.py  fail.py  fargo3dmultifluid.py  fargocpt.py  interface.py
src/disgrid/: __init__.py  config.py  data.py  field.py  fluid.py  grid.py  monotonize.py  particles.py  server_plugin.py  smurf_plugin.py
src/simdata/: __init__.py  alias.py  config.py  data.py  doublefork.py  field.py  filecache.py  fluid.py  grid.py  mount.py  remotedata.py  scalar.py  server_plugin.py  simscriptsdata.py  smurf_plugin.py  time_access.py
tests/: run.py  test_alias.py  test_aliases.py  test_data.py  test_example.py  test_field.py  test_fluid.py  test_grid.py  test_loader_PLUTO42.py  test_loader_PLUTO43.py  test_loader_fargo3d.py  test_loader_fargo3dmultifluid.py  test_loader_fargocpt.py  test_scalar.py  test_vector.py
(+106 files in other folders)
