[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disgrid"
version = "0.1"
authors = [
  { name="Thomas Rometsch", email="thomas.rometsch@gmail.com" },
  { name="Peter Rodenkirch" },
  { name="Alex Ziampras" }
]
dependencies = [
   "numpy>=1.17", 
   "astropy"
]
description = "scripts to load hydro simulation output"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["disgrid"]